--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <table cellspacing="20">
             <tr>
                 <td>
-                    <img src="images/Ryan-modified.png" alt="Ryanrich Noche Picture"
+                    <img src="Ryan-modified.png" alt="Ryanrich Noche Picture"
                     width="200" heigh"200">
                 </td>
                 <td>
