--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 
         <hr>
 
-            <h3><a href="file:///Users/ryanrichg.noche/Documents/Personal%20Learning/Bootcamp/Web%20development/Personal%20File/Hobbies.html" target="_blank">Hobbies</a></h3>
+            <h3><a href="Hobbies.html" target="_blank">Hobbies</a></h3>
         </ol>
         <br>
-        <p><a href="/Users/ryanrichg.noche/Documents/Personal Learning/Bootcamp/Web development/Personal File/Contact.html" target="_blank">contact me here</a></p>
+        <p><a href="Contact.html" target="_blank">contact me here</a></p>
 
     </body>
 </html>
