--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <h3><a href="Hobbies.html" target="_blank">Hobbies</a></h3>
         </ol>
         <br>
-        <p><a href="Contact.html" target="_blank">contact me here</a></p>
+        <p><a href="Contact.html" target="_blank">Contact me here</a></p>
 
     </body>
 </html>
