--- a/Hobbies.html
+++ b/Hobbies.html
@@ -5,7 +5,7 @@
     <title>My Hobbies</title>
 </head>
 <body>
-    <li><h3>Hobbies</h3></li>
+    <h3>Hobbies</h3>
             <ol>
                 <li><a href="https://www.facebook.com/photo/?fbid=262238936122105&set=pcb.262241042788561" Target="_blank">Table Tennis</a></li>
                 <li>Chess</li>
@@ -14,6 +14,6 @@
                 <li><a href="https://www.youtube.com/watch?v=Oy8r73rLayE&t=305s" target="_blank">Editing Videos</a></li>
             </ol>
     <br>
-    <p><a href="/Users/ryanrichg.noche/Documents/Personal Learning/Bootcamp/Web development/Personal File/index.html">Return to Biodata</a></p>
+    <p><a href="index.html">Return to Biodata</a></p>
 </body>
 </html>
