--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
         <li><a href="mailto:nocheryanrich@gmail.com" target="_blank">nocheryanrich@gmail.com</a></li>
         <li><a href="tel:639999910131" target="_blank">+(639)-99991-0131</a></li>
         <br>
-        <p><a href="/Users/ryanrichg.noche/Documents/Personal Learning/Bootcamp/Web development/Personal File/index.html">Return to Biodata</a></p>
+        <p><a href="index.html">Return to Biodata</a></p>
     </ul>
     <hr>
     <form action="mailto:nocheryanrich@gmail.com" method="post">
